# apcacli

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  publish.yml  test.yml
ci/: gitlab-ci.yml
ext/: safeguard.rs
src/: args.rs  main.rs
utils/: shell-complete.rs
