[package]
name = "apcacli"
version = "0.1.1"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/apcacli"
repository = "https://github.com/d-e-s-o/apcacli.git"
readme = "README.md"
categories = [
  "api-bindings",
  "asynchronous",
  "command-line-utilities",
  "web-programming::http-client",
  "web-programming::websocket"
]
keywords = ["cli", "trading", "finance", "async", "stocks"]
description = """
A command line tool for trading stocks on Alpaca (alpaca.markets).
"""
default-run = "apcacli"

[badges]
gitlab = { repository = "d-e-s-o/apcacli", branch = "master" }

[[bin]]
name = "shell-complete"
path = "utils/shell-complete.rs"

[dependencies]
apca = "0.17"
anyhow = {version = "1.0", default-features = false, features = ["std"]}
chrono = {version = "0.4", default-features = false}
futures = {version = "0.3", default-features = false, features = ["async-await", "std"]}
num-decimal = "0.2"
serde_json = {version = "1.0", default-features = false, features = ["raw_value"]}
structopt = {version = "0.3", default-features = false}
tokio = {version = "1.0", default-features = false, features = ["rt"]}
tracing = {version = "0.1", default-features = false, features = ["std"]}
tracing-subscriber = {version = "0.2", default-features = false, features = ["ansi", "chrono", "env-filter", "fmt"]}
uuid = {version = "0.8", features = ["v4"]}
yansi = {version = "0.5", default-features = false}
