[package]
name = "apcacli"
version = "0.1.5"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/apcacli"
repository = "https://github.com/d-e-s-o/apcacli.git"
readme = "README.md"
categories = [
  "api-bindings",
  "asynchronous",
  "command-line-utilities",
  "web-programming::http-client",
  "web-programming::websocket"
]
keywords = ["cli", "trading", "finance", "async", "stocks"]
description = """
A command line tool for trading stocks on Alpaca (alpaca.markets).
"""
default-run = "apcacli"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = false
panic = "abort"

[[bin]]
name = "shell-complete"
path = "utils/shell-complete.rs"

[build-dependencies]
anyhow = {version = "1.0", default-features = false, features = ["std"]}

[dependencies]
apca = "0.24.0"
anyhow = {version = "1.0", default-features = false, features = ["std"]}
chrono = {version = "0.4", default-features = false}
chrono-tz = {version = "0.6.1", default-features = false, features = ["std"]}
futures = {version = "0.3", default-features = false, features = ["async-await", "std"]}
num-decimal = {version = "0.2.4", default-features = false, features = ["num-v04"]}
serde_json = {version = "1.0", default-features = false}
structopt = {version = "0.3", default-features = false}
tokio = {version = "1.0", default-features = false, features = ["rt"]}
tracing = {version = "0.1", default-features = false, features = ["std"]}
tracing-subscriber = {version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt"]}
uuid = {version = "0.8", features = ["v4"]}
yansi = {version = "0.5", default-features = false}
