[package]
name = "apcacli"
version = "0.1.9"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2021"
rust-version = "1.71"
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/apcacli"
repository = "https://github.com/d-e-s-o/apcacli.git"
readme = "README.md"
categories = [
  "api-bindings",
  "asynchronous",
  "command-line-utilities",
  "web-programming::http-client",
  "web-programming::websocket"
]
keywords = ["cli", "trading", "finance", "async", "stocks"]
description = """
A command line tool for trading stocks on Alpaca (alpaca.markets).
"""
default-run = "apcacli"

[features]
vendored-openssl = ["apca/vendored-openssl"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = false
panic = "abort"

[[bin]]
name = "apcacli-safeguard"
path = "ext/safeguard.rs"

[[bin]]
name = "shell-complete"
path = "utils/shell-complete.rs"
required-features = ["clap_complete"]

[build-dependencies]
anyhow = {version = "1.0", default-features = false, features = ["std"]}
grev = {version = "0.1.3"}

[dependencies]
apca = {version = "0.30.0"}
anyhow = {version = "1.0", default-features = false, features = ["std"]}
chrono = {version = "0.4.23", default-features = false}
chrono-tz = {version = "0.10.0", default-features = false, features = ["std"]}
clap = {version = "4.4", features = ["derive", "string"]}
clap_complete = {version = "4.4", optional = true}
futures = {version = "0.3", default-features = false, features = ["async-await", "std"]}
num-decimal = {version = "0.2.4", default-features = false, features = ["num-v04"]}
serde_json = {version = "1.0", default-features = false}
tokio = {version = "1.13", default-features = false, features = ["rt"]}
tracing = {version = "0.1", default-features = false, features = ["std"]}
tracing-subscriber = {version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt"]}
uuid = {version = "1.0", features = ["v4"]}
yansi = {version = "1.0", default-features = false}

[dev-dependencies]
tempfile = {version = "3.8"}

# A set of unused dependencies that we require to force correct minimum versions
# of transitive dependencies, for cases where our dependencies have incorrect
# dependency specifications themselves.
# error[E0277]: the trait bound `Version: From<({integer}, {integer}, {integer})>` is not satisfied
_rustc_version_unused = { package = "rustc_version", version = "0.2.2" }
# error[E0308]: mismatched types
_num_bigint_unused = { package = "num-bigint", version = "0.4.2" }
# error[E0635]: unknown feature `proc_macro_span_shrink`
_proc_macro2_unused = { package = "proc-macro2", version = "1.0.60" }
# error: pasting "RUST_VERSION_OPENSSL_" and "(" does not give a valid preprocessing token
_openssl_unused = {package = "openssl", version = "0.10.35"}
# error[E0599]: `Body` is not an iterator
_http_body_unused = {package = "http-body", version = "0.4.6"}
